Fix cell wrapping of logs in presence of very ling words
% forever $ putChar 'c'

--- a/static/css/ircbrowse.css
+++ b/static/css/ircbrowse.css
@@ -5,6 +5,7 @@
 #browse .events .nick-wrap { text-align: right; color: #ccc; width: 9em }
 #browse .events .not-focused,#browse .events .not-focused .nick { color: #888; font-style: italic; font-weight: normal }
 #browse .events .focused { background: #efefef; }
+#browse .events td.text { overflow-wrap: anywhere; }
 #browse .results-per-page { float: right; }
 #browse .results-per-page .per-page-choice { margin-left: 0.3em; }
 #browse .results-per-page .current { color: #555; pointer: default }
